syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mikedilger.nostr-caesar";
option java_outer_classname = "NostrCaesarProto";

package nostr_caesar;

// The greeting service definition.
service NostrCaesar {
    // Should the event be posted?
    rpc AllowPost (RpcEventCheck) returns (RpcAnswer);

    // Should the filter be accepted?
    rpc AllowFilter (RpcFilterCheck) returns (RpcAnswer);
}

message RpcEventCheck {
    string serialized = 1;
}

message RpcFilterCheck {
    string serialized = 1;
}

message RpcAnswer {
    bool answer = 1;
}